[package]
name = "prometeo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.10.0"
serde = {version = "1.0.136", features=["derive"] }
jfs = "0.7.1"
dirs = "4.0.0"